fix styles for free acc screens
Squashed commit of the following:

commit b4c5641c3561dfac7664a4b640d20f7e0b203f07
Merge: c2cb8cdb a9a98439
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Oct 12 15:11:42 2023 +0300

    Merge branch 'master' into fix/free-acc-options-styles

commit c2cb8cdb287cf33cd89c2835a537f7a28de45f32
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Oct 12 00:48:59 2023 +0300

    fix styles for free acc

--- a/src/options/components/Account/account.pcss
+++ b/src/options/components/Account/account.pcss
@@ -23,7 +23,7 @@
     }
 
     &__actions {
-        margin-top: 15px;
+        margin-top: 24px;
         display: flex;
     }
 
@@ -36,6 +36,6 @@
     }
 
     &__features {
-        padding-top: 80px;
+        padding-top: 48px;
     }
 }
