--- a/src/options/components/App/app.pcss
+++ b/src/options/components/App/app.pcss
@@ -32,7 +32,7 @@
     }
 
     &__subtitle {
-        margin-bottom: 16px;
+        margin: 0 0 16px 16px;
         font-size: 16px;
         line-height: 24px;
     }
