--- a/src/popup/components/Header/header.pcss
+++ b/src/popup/components/Header/header.pcss
@@ -21,8 +21,9 @@
 
         &__hint {
             position: fixed;
-            right: 50px;
+            right: 47px;
             top: 50px;
+            max-width: 250px;
             display: none;
             border-radius: 7px;
             padding: 6px 18px;
